--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  background-image: url('./assets/wallpaper-adm.jpg');
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -12,6 +16,8 @@ code {
 
 
 /* PAGINA DE INGRESO */
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 #pag-de-inicio {
   height: 100vh;
   display: flex;
@@ -173,7 +179,7 @@ code {
   height: fit-content;
   padding-top: 10px;
   padding-bottom: 10px;
-  background: #1379bd;
+  background: #1379BD;
   display: flex;
   width: 100vw;
   text-align: center;
@@ -198,7 +204,29 @@ code {
 
 /* TERMINA NAVBAR */
 
+/* SIDEBAR */
+#sidebar {
+  color: #f5f5f5;
+}
+
+#item-menu {
+  transition: background-color 0.5s;
+}
+
+#item-menu:hover {
+  background-color: #0e6299;
+}
+
+.menuitem {
+  background-color: #ffffff;
+  color: #2e2e2e;
+}
+
+/* TERMINA SIDEBAR */
+
 /* LISTA DE MASCOTAS USUARIO AVANZADO */
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
 #formulario {
   display: flex;
   flex-direction: column;
@@ -207,7 +235,8 @@ code {
   width: 100%;
 }
 
-#formulario input, select {
+#formulario input,
+select {
   height: 25px;
   font-size: medium;
   width: 100%;
@@ -236,11 +265,6 @@ code {
   font-size: medium;
 }
 
-#container-mascotas {
-  padding-top: 40px;
-  padding-bottom: 40px;
-}
-
 #display-de-mascota {
   display: flex;
   flex-direction: row;
@@ -249,13 +273,18 @@ code {
   text-align: center;
 }
 
+#carta-mascota p {
+  font-size: large;
+  height: max-content;
+  font-family: 'Questrial', sans-serif;
+}
+
 #carta-mascota {
   width: 100%;
   margin: 20px;
   height: 380px;
   background: rgb(255, 255, 255);
-  background: radial-gradient(circle, rgba(226, 226, 226, 0) 52%, rgba(221, 221, 221, 0.349) 100%);
-  border: solid 1px #e2e2e2;
+  background: radial-gradient(circle, rgb(255, 255, 255) 52%, rgb(238, 238, 238) 100%);
   border-radius: 8px 8px 8px 8px;
   box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.35);
   -webkit-box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.35);
@@ -266,11 +295,6 @@ code {
   display: grid;
   justify-content: center;
   align-items: center;
-}
-
-#display-de-mascota p {
-  font-size: medium;
-  height: max-content;
 }
 
 /* TERMINA LISTA DE MASCOTAS UA */
@@ -312,3 +336,44 @@ code {
 }
 
 /* TERMINA MODAL */
+
+/* INICIO UB */
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
+#container-header-ub {
+  background-image: url('./assets/banner1.jpg');
+  background-size: cover;
+  background-position: center;
+  height: '100vh'
+}
+
+#tabla-adoptaditos {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
+#container-mision {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+}
+
+#container-mision h1 {
+  color: #2dc5a4;
+  font-family: 'Pacifico', cursive;
+  font-size: clamp(1.8rem, 6.4vw - 1rem, 3rem);
+  margin-bottom: 20px;
+}
+
+#container-mision p {
+  line-height: 28px;
+  font-size: clamp(1.1rem, 2.1vw + 0.2rem, 1.5rem);
+  font-family: 'Questrial', sans-serif;
+}
+
+
+/* TERMINA INICIO UB */
