--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,7 +8,9 @@
 body {
   background-image: url('./assets/wallpaper-adm.jpg');
 }
-body input:focus, textarea:focus{
+
+body input:focus,
+textarea:focus {
   outline: none;
 }
 
@@ -235,11 +237,12 @@ code {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-#formulario-mascota h1{
+#formulario-mascota h1 {
   margin-bottom: 20px;
 }
 
-#formulario-mascota input, select {
+#formulario-mascota input,
+select {
   font-size: medium;
   background: none;
   border: none;
@@ -253,20 +256,27 @@ code {
   font-size: medium;
 }
 
-#formulario-editar {
-  padding-left: 20px;
-  padding-right: 20px;
+.formulario-editar * {
   display: flex;
-  flex-direction: column;
-  gap: 20px;
-  font-size: medium;
+  justify-content: center;
+  font-size: 14px;
+  margin-bottom: 8px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#formulario-editar textarea {
+.formulario-editar textarea {
   resize: none;
-  height: 100px;
+  height: 130px;
+  font-size: 14px;
   width: 100%;
-  font-size: medium;
+}
+
+.container-formulario-editar {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #display-de-mascota {
@@ -295,10 +305,30 @@ code {
   align-items: center;
 }
 
+#carta-mascota-nueva {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 20px;
+  height: 380px;
+  background: rgb(255, 255, 255);
+  background: radial-gradient(circle, rgb(255, 255, 255) 52%, rgb(238, 238, 238) 100%);
+  border-radius: 8px 8px 8px 8px;
+  box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.35);
+  -webkit-box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.35);
+  -moz-box-shadow: 0px 4px 10px -1px rgba(0, 0, 0, 0.35);
+}
+
 /* */
 
 /* MODAL */
+#modal * {
+  margin-bottom: 15px;
+}
+
 .modal {
+  opacity: 0;
   z-index: 2;
   position: fixed;
   top: 0;
@@ -310,9 +340,21 @@ code {
   justify-content: center;
   align-items: center;
   color: #000;
+  animation: fadeIn 0.2s ease 0.2s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
 
 .modal-content {
+  text-align: justify;
   display: flex;
   flex-direction: column;
   justify-content: center;
