--- a/frontend/src/components/usuarioBasico/cartelAdoptaditos.css
+++ b/frontend/src/components/usuarioBasico/cartelAdoptaditos.css
@@ -58,7 +58,8 @@
 
 #container-adoptados h1 {
     font-family: 'Pacifico', cursive;
-    font-size: clamp(1.5rem, 8vw - 2rem, 3rem);
+    font-size: clamp(2rem, 7.5vw - 1.3rem, 3.4rem);
+    color: #292929;
 }
 
 @keyframes bg-color {
@@ -67,19 +68,19 @@
     }
 
     20% {
-        background-color: #1379BD;
+        background-color: #00a682;
     }
 
     40% {
-        background-color: #2dc5a4;
+        background-color: #008a6c;
     }
 
     60% {
-        background-color: #1379BD;
+        background-color: #008a6c;
     }
 
     80% {
-        background-color: #23b0d3;
+        background-color: #00a682;
     }
 
     100% {
@@ -144,45 +145,13 @@
     font-family: 'Spicy Rice', cursive;
     padding: 15px 15px;
     margin: 64px 0;
-    animation: sway 5s linear infinite, bg-color 10s infinite;
+    animation: sway 5s linear infinite;
     transform-origin: 50% -32px;
-    /* background: #1379BD; */
+    background-image: url('../../assets/pattern-wood.png');
+    background-size: 60%;
+    background-repeat: repeat;
     border-radius: 10px 10px 10px 10px;
-    background-size: 3px 3px,
-        3px 3px,
-        3px 3px,
-        3px 3px,
-        16px 16px,
-        16px 16px,
-        16px 16px,
-        16px 16px,
-        calc(100% - 32px + 4px) 16px,
-        calc(100% - 32px + 4px) 16px,
-        16px calc(50% - 32px),
-        16px calc(50% - 32px),
-        16px calc(50% - 32px),
-        16px calc(50% - 32px),
-        32px 32px,
-        32px 32px,
-        calc(100% - 32px + 4px) calc(100% - 32px);
-    background-position: 0 calc(50% - 16px),
-        100% calc(50% - 16px),
-        0 calc(50% + 16px),
-        100% calc(50% + 16px),
-        0 0,
-        100% 0,
-        100% 100%,
-        0 100%,
-        calc(16px - 1px) 0,
-        calc(16px - 1px) 100%,
-        0 16px,
-        0 calc(100% - 16px),
-        100% 16px,
-        100% calc(100% - 16px),
-        0 50%,
-        100% 50%,
-        calc(16px - 1px) 16px;
-    background-repeat: no-repeat;
+    box-shadow: 0px 13px 22px -7px rgba(0,0,0,1);
 }
 
 .cartel::before {
@@ -194,7 +163,7 @@
     left: 0;
     z-index: -1;
     transform: rotate(-15deg);
-    background: linear-gradient(to right, transparent 0%, transparent 13%, #555555 15%, #5a5a5a 17%, #c0c0c0 100%);
+    background: linear-gradient(to right, transparent 0%, transparent 13%, #292929 15%, #292929 17%, #292929 100%);
 }
 
 .cartel::after {
@@ -206,5 +175,5 @@
     right: 0;
     z-index: -1;
     transform: rotate(15deg);
-    background: linear-gradient(to left, transparent 0%, transparent 13%, #555555 15%, #5a5a5a 17%, #c0c0c0 100%);
+    background: linear-gradient(to left, transparent 0%, transparent 13%, #292929 15%, #292929 17%, #292929 100%);
 }
