--- a/frontend/src/components/commons/estiloMensajeCargando.css
+++ b/frontend/src/components/commons/estiloMensajeCargando.css
@@ -3,7 +3,7 @@
   margin:0;
   width:100%;
   height:100vh;
-  background:radial-gradient(#1379BD, #084f7e);
+  background:radial-gradient(#FFCC4E, #c58d00);
 }
 .wrapper{
   width:200px;
