--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -189,34 +189,118 @@ code {
 #navbar {
   position: absolute;
   top: 0;
-  height: fit-content;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background: #292929;
-  display: flex;
+  height: 70px;
   width: 100vw;
+  display: flex;
   text-align: center;
   justify-content: center;
   align-items: center;
+  background: #292929;
+}
+
+.navbar {
+  padding-top: 10px;
+  padding-bottom: 10px;
   text-transform: uppercase;
 }
 
-#navbar a {
+.navbar a {
   text-decoration: none;
   color: #ffffff;
-  transition: color 0.1s;
+  transition: color 0.2s;
 }
 
-#navbar a:hover {
-  color: #ffffff86;
-  border-bottom: solid 5px #FFCC4E;
+.navbar a:hover {
+  color: #FFCC4E
 }
 
-#navbar a:active {
-  color: #ffffffc0;
+.navbar a:active {
+  color: #cf990f
+}
+
+.dropbtn {
+  border: none;
+  background: none;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
+  row-gap: 12px;
 }
 
 /* */
+
+/* MENU HORIZONTAL CELULAR */
+#navbar-horizontal {
+  width: 100vw;
+  height: 70px;
+  position: fixed;
+  z-index: 8;
+  background-color: #292929;
+}
+
+.navbar-horizontal-content {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-horizontal-content button {
+  position: absolute;
+  margin-right: 30px;
+  right: 0;
+  background: none;
+  border: none;
+  color: #fff;
+}
+
+
+.navbar-horizontal-content .boton {
+  font-size: large;
+  transform: rotate(0);
+  transition: transform 1s;
+}
+
+.navbar-horizontal-content .boton-onclick {
+  font-size: large;
+  transform: rotate(-180deg);
+  transition: transform 1s;
+}
+
+
+.menu-horizontal {
+  margin-top: auto;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  background-color: #292929;
+  border-top: solid 5px #FFCC4E;
+  z-index: 50;
+  row-gap: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.menu-horizontal a {
+  font-size: large;
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu-horizontal a:active {
+  color: #8d8d8d;
+}
+
+/*  */
 
 /* SIDEBAR */
 #sidebar {
@@ -591,20 +675,68 @@ select {
 
 /* INICIO UB */
 @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
-#container-header-ub {
+#container-banner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
   background-image: url('./assets/banner1.jpg');
   background-size: cover;
   background-position: center;
-  height: '100vh'
+  height: 100vh
 }
 
-#tabla-adoptaditos {
-  background-image: url('assets/pattern.png');
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center
+.contenido-banner {
+  display: inline-grid;
+}
+
+.contenido-banner * {
+  margin-bottom: 10px;
+  font-family: 'Questrial';
+}
+
+.contenido-banner h1 {
+  background-color: #00000063;
+  font-size: 3rem;
+  border: solid 6px #292929;
+  padding: 16px;
+}
+
+.contenido-banner p {
+  font-size: clamp(1rem, 4.3vw - 0.9rem, 1.8rem);
+  font-family: 'Courier Prime', monospace;
+  overflow: hidden;
+  border-right: .15em solid rgb(255, 255, 255);
+  white-space: nowrap;
+  animation:
+    typing 3.5s steps(40, end),
+    blink-caret .75s step-end infinite;
+  max-width: fit-content;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+
+  to {
+    width: 100%
+  }
+}
+
+@keyframes blink-caret {
+
+  from,
+  to {
+    border-color: transparent
+  }
+
+  50% {
+    border-color: #FFCC4E;
+  }
 }
 
 #container-mision {
@@ -612,7 +744,7 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #f3f3f3;
 }
 
 #container-mision h1 {
@@ -628,5 +760,15 @@ select {
   font-family: 'Questrial', sans-serif;
 }
 
+#galeria-adopciones {
+  height: max-content;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#galeria-adopciones h1 {
+  padding-bottom: 50px;
+  font-size: clamp(1.8rem, 6.4vw - 1rem, 3rem);
+}
 
 /* */
