--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,13 @@
 * {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Questrial';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  background-color: #F3F3F3;
 }
 
 body h1 {
@@ -189,7 +194,7 @@ code {
 #navbar {
   position: absolute;
   top: 0;
-  height: 70px;
+  height: 8vh;
   width: 100vw;
   display: flex;
   text-align: center;
@@ -204,6 +209,28 @@ code {
   text-transform: uppercase;
 }
 
+.navbar .col {
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.boton-ch {
+  position: absolute;
+  left: 0;
+  padding-left: 40px;
+  font-size: x-large;
+  color: #fff;
+  transition: font-size 0.5s;
+  text-decoration: none;
+  font-family: 'Pacifico', cursive;
+}
+
+.boton-ch:hover {
+  font-size: 28px;
+}
+
 .navbar a {
   text-decoration: none;
   color: #ffffff;
@@ -216,23 +243,6 @@ code {
 
 .navbar a:active {
   color: #cf990f
-}
-
-.dropbtn {
-  border: none;
-  background: none;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.dropdown-content {
-  position: absolute;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  z-index: 1;
-  row-gap: 12px;
 }
 
 /* */
@@ -254,7 +264,7 @@ code {
 
 .navbar-horizontal-content button {
   position: absolute;
-  margin-right: 30px;
+  margin-right: 40px;
   right: 0;
   background: none;
   border: none;
@@ -264,14 +274,13 @@ code {
 
 .navbar-horizontal-content .boton {
   font-size: large;
-  transform: rotate(0);
-  transition: transform 1s;
+  transition: transform 0.5s;
 }
 
 .navbar-horizontal-content .boton-onclick {
   font-size: large;
   transform: rotate(-180deg);
-  transition: transform 1s;
+  transition: transform 0.5s;
 }
 
 
@@ -590,8 +599,11 @@ select {
   color: #2dc5a4
 }
 
+#formulario-adopcion p {
+  line-height: 18px;
+}
+
 #formulario-adopcion h3 {
-  margin-top: 30px;
   text-align: left;
   font-family: Arial, Helvetica, sans-serif;
   font-size: x-large
@@ -686,7 +698,8 @@ select {
   background-image: url('./assets/banner1.jpg');
   background-size: cover;
   background-position: center;
-  height: 100vh
+  height: 100vh;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 calc(100% - 150px));
 }
 
 .contenido-banner {
@@ -761,14 +774,178 @@ select {
 }
 
 #galeria-adopciones {
+  background-image: url('./assets/pattern.png');
+  height: max-content;
+  padding-bottom: 80px;
+  padding-top: 80px;
+  --mask:
+    radial-gradient(43.50px at 50% 61.50px, #000 99%, #0000 101%) calc(50% - 60px) 0/120px 51% repeat-x,
+    radial-gradient(43.50px at 50% -31.5px, #0000 99%, #000 101%) 50% 30px/120px calc(51% - 30px) repeat-x,
+    radial-gradient(43.50px at 50% calc(100% - 61.50px), #000 99%, #0000 101%) calc(50% - 60px) 100%/120px 51% repeat-x,
+    radial-gradient(43.50px at 50% calc(100% + 31.50px), #0000 99%, #000 101%) 50% calc(100% - 30px)/120px calc(51% - 30px) repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+.mural-adoptados {
   height: max-content;
   padding-top: 50px;
   padding-bottom: 50px;
 }
 
-#galeria-adopciones h1 {
+.mural-adoptados h1 {
   padding-bottom: 50px;
   font-size: clamp(1.8rem, 6.4vw - 1rem, 3rem);
 }
 
 /* */
+
+/* BOTONERA DE ACCIONES */
+#botonera-de-acciones, a {
+  height: max-content;
+  margin-top: 10%;
+  margin-bottom: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.botonera-de-acciones-content .row {
+  height: 40vh;
+  gap: 20px;
+}
+
+.botonera-de-acciones-content .col {
+  text-transform: uppercase;
+  padding: 20px;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  background-color: #2dc5a4;
+  border-radius: 50px 50px 0 50px;
+  margin-bottom: 20px;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: solid 7px #292929;
+  filter: grayscale(100%);
+  transition: background-size 1s, filter 0.2s;
+}
+
+.botonera-de-acciones-content a {
+  text-decoration: none
+}
+
+.botonera-de-acciones-content .col:hover {
+  filter: grayscale(0%);
+}
+
+.botonera-de-acciones-content .col p {
+  color: #fff;
+  font-size: clamp(1rem, 1.1vw + 0.5rem, 1.2rem);
+  font-weight: 600;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-shadow: 0px 0px 5px rgb(0, 0, 0);
+}
+
+/*  */
+
+/* DONACIONES */
+#container-donaciones {
+  height: 80vh;
+  text-align: center;
+  font-size: large;
+}
+
+#container-donaciones-mq {
+  padding-top: 80px;
+  height: 100vh;
+  text-align: center;
+  font-size: large;
+}
+
+
+.donaciones-links {
+  height: max-content;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
+.donaciones-links-mq {
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
+.donaciones-links .row,
+.donaciones-links-mq .row {
+  margin-top: 40px;
+  gap: 10px;
+  width: 80%;
+}
+
+.donaciones-links .col,
+.donaciones-links-mq .col {
+  margin: 0;
+  width: 100%;
+  font-size: 2em;
+  font-weight: 600;
+  color: #ffffff;
+  height: 100px;
+  background-color: #2dc5a4;
+  border-radius: 50px 50px 50px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  transition: background-color 0.1s;
+}
+
+.donaciones-links .col:hover,
+.donaciones-links-mq .col:hover {
+  background-color: #0da785;
+}
+
+.donaciones-links p,
+.donaciones-links-mq p {
+  font-family: 'Questrial';
+  font-size: clamp(1.4rem, 3.2vw + 0rem, 2rem);
+}
+
+/*  */
+
+/* FOOTER */
+#footer {
+  color: #fff;
+  justify-content: center;
+  background-color: #292929;
+  height: max-content;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer-content h3 {
+  color: #2dc5a4;
+}
+
+.footer-content .col a {
+  margin: 0;
+  display: block;
+  text-decoration: none;
+  color: #fff;
+}
+
+.footer-content .col span {
+  margin-bottom: 2px;
+  gap: 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+/*  */
